@@ -30,6 +30,8 @@ Revision history for DBIx::Class
           so that test relying on the order of %{} will no longer fail
         - Fixed mysterious ::Storage::DBI goto-shim failures on older
           perl versions
+        - Non-blessed reference exceptions are now correctly preserved
+          when thrown from udner DBIC (e.g. from txn_do)
 
     * Misc
         - Refactored capability handling in Storage::DBI, allows for
